# genealogy-v2

./: .gitignore  README.md  bun.lockb  docker.sh  package.json  vite.config.ts.timestamp-1731735406793-81403f4c86be2.mjs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  repo.rs
src-tauri/src/commands/: create.rs  delete.rs  read.rs  update.rs
src-tauri/src/database/: mod.rs  query.rs
src-tauri/src/types/: file.rs  mod.rs  note.rs
src-tauri/src/utils/: mod.rs
src/assets/css/: forms.css  main.css  tables.css
src/assets/css/components/: notessection.css
src/components/: About.vue  AboutModal.vue  AddNewForm.vue  EditForm.vue  EditView.vue  ErrorModal.vue  Modal.vue  NoteSection.vue  SuccessModal.vue  UpdateForm.vue
src/components/aside/: index.vue
src/components/form/: FormInput.vue  FormSelect.vue
src/components/icons/: Info.vue  Settings.vue
src/components/tables/: Employees.vue  Females.vue  Relatives.vue
src/composables/: about.ts  date.ts  error.ts  success.ts
src/store/: files.ts  images.ts  notes.ts  relatives.ts  state.ts
src/utils/: file.ts  notes.ts  types.ts
